--- a/css/custom.css
+++ b/css/custom.css
@@ -45,3 +45,42 @@
 .tab-info.active{
     display: block;
 }
+
+.admin__select-option{
+    position: absolute;
+    background-color: #fff;
+    z-index: 1;
+    top: calc( 100% + 2px );
+}
+
+.admin__select-option-list{
+    padding: 12px 0;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px #333;
+}
+
+.admin__select-option-list::before{
+    content: "";
+    position: absolute;
+    top: -16px;
+    width: 100%;
+    height: 20px;
+    background-color: transparent;
+}
+
+.admin__select-option-list::after{
+    content: "";
+    position: absolute;
+    top: -20px;
+    left: 16px;
+    border-width: 12px 18px;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent; 
+    z-index: 1;
+}
+
+.admin__select-option-item{
+    color: #333;
+    list-style: none;
+    padding: 8px 16px;
+}
