--- a/css/style.default.css
+++ b/css/style.default.css
@@ -43,6 +43,8 @@ h1 {
   color: #fff;
 }
 #top ul.menu {
+  display: flex;
+  float: right;
   padding-top: 5px;
   margin: 0;
   text-align: right;
@@ -54,6 +56,18 @@ h1 {
     text-align: center;
   }
 }
+
+/* admin option */
+.admin__select:hover .admin__select-option{
+  display: block;
+}
+
+.admin__select-option{
+  text-align: left;
+  margin-top: 6px;
+  display: none;
+}
+
 #top ul.menu > li {
   display: inline-block;
 }
@@ -1245,6 +1259,7 @@ h1 {
 .navbar-default {
   background-color: #ffffff;
   border-bottom-color: #e6e6e6;
+  z-index: -1 !important;
 }
 .navbar-default .navbar-brand {
   color: #777777;
